Add a sanity check to the single-owner chain manager.

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -626,6 +626,8 @@ SingleOwnerManagerInfo:
   STRUCT:
     - owner:
         TYPENAME: Owner
+    - public_key:
+        TYPENAME: PublicKey
     - pending:
         OPTION:
           TYPENAME: LiteVote
