--- a/linera-explorer/package.json
+++ b/linera-explorer/package.json
@@ -1,17 +1,35 @@
 {
   "author": "linera <linera@contact.com>",
   "name": "linera-explorer",
-  "version": "0.1.0",
+  "version": "0.4.0",
   "scripts": {
-    "build": "webpack",
-    "test": "cargo test && wasm-pack test --headless"
+    "clean": "rm -rf pkg dist package-lock.json gql",
+    "wipe": "npm run clean && rm -rf node_modules",
+    "rust": "wasm-pack build -t web",
+    "ts": "vue-tsc",
+    "vite": "vite build",
+    "build": "npm run ts && npm run vite",
+    "codegen": "graphql-codegen --config codegen_service.ts && graphql-codegen --config codegen_indexer.ts && graphql-codegen --config codegen_operations.ts",
+    "full": "npm run codegen && npm run rust && npm run build",
+    "test": "vitest",
+    "serve": "vite --port 3000"
   },
-  "devDependencies": {
-    "@wasm-tool/wasm-pack-plugin": "^1.6",
-    "copy-webpack-plugin": "^11.0",
+    "dependencies": {
+    "bootstrap": "^5.3",
+    "bootstrap-icons": "^1.10",
     "json-formatter-js": "^2.3",
-    "webpack": "^5.88",
-    "webpack-cli": "^5.1",
-    "html-loader": "^4.2"
+    "vue": "^3.3"
+  },
+    "devDependencies": {
+    "@graphql-codegen/cli": "^5.0",
+    "@graphql-codegen/typescript": "^4.0",
+    "@vitejs/plugin-vue": "^4.2",
+    "@vue/test-utils": "^2.4",
+    "happy-dom": "^10.11",
+    "vite": "^4.4",
+    "vitest": "^0.34",
+    "vue-tsc": "^1.8",
+    "wasm-pack": "^0.12.1",
+    "webdriverio": "^8.16.4"
   }
 }
