--- a/.github/workflows/fail.yml
+++ b/.github/workflows/fail.yml
@@ -13,9 +13,9 @@ permissions:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-    - name: Fail loudly, II
+    - name: Fail loudly, III
       run: |
         >&2 echo WORKFLOW INTENTIONALLY FAILING
         exit 1
