Elimination of some tests in src/common and addition of the test for the matching_engine.

--- a/examples/matching-engine/Cargo.toml
+++ b/examples/matching-engine/Cargo.toml
@@ -19,6 +19,9 @@ fungible = { workspace = true, features = ["test"] }
 linera-sdk = { workspace = true, features = ["test", "wasmer"] }
 tokio = { workspace = true }
 
+[dev-dependencies]
+webassembly-test = { workspace = true }
+
 [[bin]]
 name = "matching_engine_contract"
 path = "src/contract.rs"
