--- a/.github/workflows/fail.yml
+++ b/.github/workflows/fail.yml
@@ -15,7 +15,7 @@ jobs:
   test:
     runs-on: self-hosted
     steps:
-    - name: Fail loudly, III
+    - name: Fail loudly, IV
       run: |
         >&2 echo WORKFLOW INTENTIONALLY FAILING
         exit 1
