--- a/kubernetes/linera-validator/helmfile.yaml
+++ b/kubernetes/linera-validator/helmfile.yaml
@@ -19,6 +19,8 @@ releases:
         value: {{ env "LINERA_HELMFILE_SET_SERVER_CONFIG" | default "working/server_1.json" }}
       - name: validator.genesisConfig
         value: {{ env "LINERA_HELMFILE_SET_GENESIS_CONFIG" | default "working/genesis.json" }}
+      - name: numShards
+        value: {{ env "LINERA_HELMFILE_SET_NUM_SHARDS" | default 10 }}
   - name: scylla
     namespace: scylla
     chart: scylla/scylla
