--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -46,6 +46,10 @@ jobs:
           strip target/release/linera-proxy
           strip target/release/linera-server
           strip target/release/linera-db
+      - name: Install Helmfile
+        run: |
+          /home/linuxbrew/.linuxbrew/bin/brew install helmfile
+          helm plugin install https://github.com/databus23/helm-diff
       - name: Run Wasm e2e test
         uses: nick-fields/retry@v2
         with:
