--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -337,7 +337,8 @@ Event:
     - authenticated_signer:
         OPTION:
           TYPENAME: Owner
-    - is_protected: BOOL
+    - kind:
+        TYPENAME: MessageKind
     - timestamp:
         TYPENAME: Timestamp
     - message:
@@ -442,6 +443,16 @@ MessageId:
     - height:
         TYPENAME: BlockHeight
     - index: U32
+MessageKind:
+  ENUM:
+    0:
+      Simple: UNIT
+    1:
+      Protected: UNIT
+    2:
+      Tracked: UNIT
+    3:
+      Bouncing: UNIT
 NodeError:
   ENUM:
     0:
@@ -545,7 +556,8 @@ OutgoingMessage:
     - authenticated_signer:
         OPTION:
           TYPENAME: Owner
-    - is_protected: BOOL
+    - kind:
+        TYPENAME: MessageKind
     - message:
         TYPENAME: Message
 Owner:
