--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,6 +92,7 @@ rcgen = "0.11.1"
 reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
 rocksdb = "0.21.0"
 scylla = "0.10.1"
+semver = "1.0.20"
 serde = { version = "1.0.190", features = ["derive"] }
 serde_bytes = "0.11.12"
 serde_json = "1.0.107"
