--- a/linera-version/Cargo.toml
+++ b/linera-version/Cargo.toml
@@ -15,6 +15,7 @@ base64.workspace = true
 cargo_metadata.workspace = true
 glob.workspace = true
 once_cell.workspace = true
+semver.workspace = true
 serde.workspace = true
 sha3.workspace = true
 thiserror.workspace = true
@@ -24,6 +25,7 @@ tracing.workspace = true
 base64.workspace = true
 cargo_metadata.workspace = true
 glob.workspace = true
+semver.workspace = true
 sha3.workspace = true
 thiserror.workspace = true
-
+quote.workspace = true
