--- a/linera-version/Cargo.toml
+++ b/linera-version/Cargo.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 repository = "https://github.com/linera-io/linera-protocol"
 homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-rpc/latest/linera_rpc/"
+description = "Crate version management for the Linera protocol"
 license = "Apache-2.0"
 edition = "2021"
 
@@ -25,7 +26,7 @@ tracing.workspace = true
 base64.workspace = true
 cargo_metadata.workspace = true
 glob.workspace = true
+quote.workspace = true
 semver.workspace = true
 sha3.workspace = true
 thiserror.workspace = true
-quote.workspace = true
