--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -38,7 +38,7 @@ async-trait.workspace = true
 axum = { workspace = true, features = ["ws", "headers"] }
 bcs.workspace = true
 cargo_toml = "0.15.3"
-chrono.workspace = true
+chrono = { workspace = true, features = ["clock"] }
 clap.workspace = true
 clap-markdown.workspace = true
 colored.workspace = true
@@ -54,14 +54,14 @@ hex.workspace = true
 http.workspace = true
 k8s-openapi = { workspace = true, optional = true }
 kube = { workspace = true, optional = true }
-linera-base.workspace = true
-linera-chain.workspace = true
-linera-core.workspace = true
-linera-execution.workspace = true
-linera-rpc.workspace = true
-linera-storage.workspace = true
+linera-base = { workspace = true, features = ["metrics"] }
+linera-chain = { workspace = true, features = ["metrics"] }
+linera-core = { workspace = true, features = ["metrics"] }
+linera-execution = { workspace = true, features = ["fs", "metrics"] }
+linera-rpc = { workspace = true, features = ["metrics"] }
+linera-storage = { workspace = true, features = ["metrics"] }
 linera-version.workspace = true
-linera-views.workspace = true
+linera-views = { workspace = true, features = ["metrics"] }
 pathdiff = { workspace = true, optional = true }
 port-selector = { workspace = true, optional = true }
 prometheus.workspace = true
