--- a/Cargo.toml
+++ b/Cargo.toml
@@ -148,7 +148,7 @@ wasm-bindgen = "0.2.92"
 wasm-bindgen-test = "0.3.42"
 wasm-encoder = "0.24.1"
 wasm-instrument = "0.4.0"
-wasmer = { version = "4.3.0-alpha.1", features = ["singlepass"] }
+wasmer = { version = "4.3.0-alpha.1", default-features = false }
 wasmer-compiler-singlepass = "4.3.0-alpha.1"
 wasmparser = "0.101.1"
 wasmtime = "1.0"
