--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -29,7 +29,7 @@ wasmtime = [
     "wasm-encoder",
     "wasmparser",
 ]
-web = ["linera-base/web", "linera-views/web"]
+web = ["linera-base/web", "linera-views/web", "wasmer?/js-default"]
 
 [dependencies]
 anyhow.workspace = true
@@ -65,6 +65,7 @@ wasmtime = { workspace = true, optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { workspace = true, features = ["rt-multi-thread"] }
+wasmer = { workspace = true, features = ["sys-default", "singlepass"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tokio = { workspace = true, features = ["rt"] }
