--- a/linera-sdk/Cargo.toml
+++ b/linera-sdk/Cargo.toml
@@ -18,6 +18,7 @@ features = ["test", "wasmer"]
 targets = ["wasm32-unknown-unknown", "x86_64-unknown-linux-gnu"]
 
 [features]
+ethereum = ["async-trait", "ethers"]
 wasmer = [
     "linera-core/wasmer",
     "linera-execution/wasmer",
@@ -46,10 +47,12 @@ wit-bindgen.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 async-graphql.workspace = true
+async-trait = { workspace = true, optional = true }
 anyhow.workspace = true
 cargo_toml.workspace = true
 clap.workspace = true
 dashmap.workspace = true
+ethers = { workspace = true, optional = true }
 linera-base = { workspace = true, features = ["metrics"] }
 linera-chain = { workspace = true, features = ["metrics"] }
 linera-core = { workspace = true, features = ["test", "metrics", "wasmer"] }
