`linera-{execution,witty}: allow non-`Send` types in `UserData`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -217,3 +217,8 @@ opt-level = 3
 version = "0.4.1"
 git = "https://github.com/Twey/rust-indexed-db"
 branch = "no-uuid-wasm-bindgen"
+
+[patch.crates-io.wasmer]
+version = "4.3.0-alpha.1"
+git = "https://github.com/Twey/wasmer"
+branch = "non-send-environments"
