--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -57,3 +57,8 @@ strip = 'debuginfo'
 
 [profile.bench]
 debug = true
+
+[patch.crates-io.wasmer]
+version = "4.3.0-alpha.1"
+git = "https://github.com/Twey/wasmer"
+branch = "non-send-environments"
