--- a/examples/gen-nft/Cargo.toml
+++ b/examples/gen-nft/Cargo.toml
@@ -11,10 +11,14 @@ test = []
 async-graphql.workspace = true
 base64.workspace = true
 bcs.workspace = true
+candle-core.workspace = true
+candle-transformers.workspace = true
 fungible.workspace = true
+getrandom.workspace = true
 linera-sdk.workspace = true
 serde.workspace = true
 sha3.workspace = true
+tokenizers.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 fungible = { workspace = true, features = ["test"] }
@@ -23,9 +27,9 @@ linera-sdk = { workspace = true, features = ["test", "wasmer"] }
 tokio.workspace = true
 
 [[bin]]
-name = "non_fungible_contract"
+name = "gen_nft_contract"
 path = "src/contract.rs"
 
 [[bin]]
-name = "non_fungible_service"
+name = "gen_nft_service"
 path = "src/service.rs"
