--- a/linera-service/template/contract.rs.template
+++ b/linera-service/template/contract.rs.template
@@ -2,7 +2,11 @@
 
 mod state;
 
-use linera_sdk::{{base::WithContractAbi, Contract, ContractRuntime}};
+use linera_sdk::{{
+    base::WithContractAbi,
+    views::{{RootView, View, ViewStorageContext}},
+    Contract, ContractRuntime,
+}};
 
 use self::state::Application;
 
@@ -18,17 +22,15 @@ impl WithContractAbi for ApplicationContract {{
 }}
 
 impl Contract for ApplicationContract {{
-    type State = Application;
     type Message = ();
     type Parameters = ();
     type InstantiationArgument = ();
 
-    async fn new(state: Self::State, runtime: ContractRuntime<Self>) -> Self {{
+    async fn new(runtime: ContractRuntime<Self>) -> Self {{
+        let state = Application::load(ViewStorageContext::from(runtime.key_value_store()))
+            .await
+            .expect("Failed to load state");
         ApplicationContract {{ state, runtime }}
-    }}
-
-    fn state_mut(&mut self) -> &mut Self::State {{
-        &mut self.state
     }}
 
     async fn instantiate(&mut self, _argument: Self::InstantiationArgument) {{}}
@@ -36,4 +38,8 @@ impl Contract for ApplicationContract {{
     async fn execute_operation(&mut self, _operation: Self::Operation) -> Self::Response {{}}
 
     async fn execute_message(&mut self, _message: Self::Message) {{}}
+
+    async fn finalize(&mut self) {{
+        self.state.save().await.expect("Failed to save state");
+    }}
 }}
