--- a/linera-service/template/service.rs.template
+++ b/linera-service/template/service.rs.template
@@ -3,7 +3,11 @@
 mod state;
 
 use self::state::Application;
-use linera_sdk::{{base::WithServiceAbi, Service, ServiceRuntime}};
+use linera_sdk::{{
+    base::WithServiceAbi,
+    views::{{View, ViewStorageContext}},
+    Service, ServiceRuntime,
+}};
 
 pub struct ApplicationService {{
     state: Application,
@@ -17,10 +21,12 @@ impl WithServiceAbi for ApplicationService {{
 }}
 
 impl Service for ApplicationService {{
-    type State = Application;
     type Parameters = ();
 
-    async fn new(state: Self::State, runtime: ServiceRuntime<Self>) -> Self {{
+    async fn new(runtime: ServiceRuntime<Self>) -> Self {{
+        let state = Application::load(ViewStorageContext::from(runtime.key_value_store()))
+            .await
+            .expect("Failed to load state");
         ApplicationService {{ state, runtime }}
     }}
 
