--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -24,8 +24,7 @@ env:
   RUST_BACKTRACE: short
   RUSTFLAGS: "-D warnings"
   RUSTUP_MAX_RETRIES: 10
-  LINERA_CRATES: base chain core execution rpc sdk sdk-derive service service-graphql-client storage version views views-derive witty witty-macros
-  VERSION: 0.1.0
+  LINERA_PACKAGES: "packages.txt"
 
 permissions:
   contents: read
@@ -55,40 +54,50 @@ jobs:
         publish_dir: ./target/doc
         force_orphan: true
 
-  # TODO(#802): Fix this job.
-  # docsrs:
-  #   runs-on: ubuntu-latest
+  test-crates-and-docrs:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #   - uses: actions-rust-lang/setup-rust-toolchain@v1
-  #   - name: Checkout docs.rs tool repository
-  #     run: |
-  #       cd ${{ runner.temp }}
-  #       git clone https://github.com/rust-lang/docs.rs docsrs
-  #       cd docsrs
-  #       git submodule update --init
-    # - name: Generate standalone packages
-    #   run: |
-    #     for crate in $LINERA_CRATES; do
-    #         cargo publish -p "linera-${crate}" --dry-run --target-dir "${{ runner.temp }}/crates/linera-${crate}" --no-verify
-    #     done
-    #
-    # - name: Extract packaged crates
-    #   run: |
-    #     for crate in $LINERA_CRATES; do
-    #         pushd "${{ runner.temp }}/crates/linera-${crate}/package"
-    #         tar -xzvf "linera-${crate}-${VERSION}.crate"
-    #         popd
-    #     done
-    # - name: Build documentation using docs.rs
-    #   run: |
-    #     cd ${{ runner.temp }}/docsrs
-    #     cp .env.sample .env
-    #     mkdir -p ignored/cratesfyi-prefix/crates.io-index
-    #     . ./.env
-    #     docker-compose up -d db s3
-    #     cargo run -- database migrate
-    #     for crate in $LINERA_CRATES; do
-    #         cargo run -- build crate --local "${{ runner.temp }}/crates/linera-${crate}/package/linera-${crate}-${VERSION}"
-    #     done
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions-rust-lang/setup-rust-toolchain@v1
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Install cargo tools
+      run: |
+        cargo install cargo-index
+        cargo install cargo-local-registry
+    - name: Setup git committer information
+      run: |
+        git config --global user.email "ci@linera.io"
+        git config --global user.name "CI"
+    - name: Generate packages
+      run: |
+        scripts/test_publish.sh "$LINERA_PACKAGES" ${{ runner.temp }}/registry
+    - name: Extract packaged crates
+      run: |
+        cd "${{ runner.temp }}/registry"
+        grep -v '^#' "$LINERA_PACKAGES" | while read LINE; do
+            CRATE="${LINE%% *}"
+            tar -xzvf "${CRATE}-*.crate"
+        done
+    - name: Checkout docs.rs tool repository
+      run: |
+        cd ${{ runner.temp }}
+        git clone https://github.com/rust-lang/docs.rs docsrs
+        cd docsrs
+        git submodule update --init
+    - name: Build documentation using docs.rs
+      run: |
+        cd ${{ runner.temp }}/docsrs
+        cp .env.sample .env
+        mkdir -p ignored/cratesfyi-prefix/crates.io-index
+        . .env
+        SQLX_OFFLINE=1 cargo build
+        docker-compose up -d db s3
+        cargo run -- database migrate
+        grep -v ^# "$LINERA_PACKAGES" | while read LINE; do
+            CRATE="${LINE%% *}"
+            cargo run -- build crate --local "${{ runner.temp }}/registry/${CRATE}-*/"
+        done
