--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ edition = "2021"
 
 [workspace.dependencies]
 heck = "0.4.1"
-alloy = { git = "https://github.com/alloy-rs/alloy", rev = "aed6de2c4a0e901c4aa71e4b67c2ed628285d270", default-features = false }
+linera-alloy = { git = "https://github.com/MathieuDutSik/alloy", rev = "d16674c395a2b126a66f4e79392168f49f8e2264", default-features = false }
 alloy-primitives = "0.7.2"
 anyhow = "1.0.80"
 assert_matches = "1.5.0"
