--- a/examples/ethereum-tracker/Cargo.toml
+++ b/examples/ethereum-tracker/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Linera <contact@linera.io>"]
 edition = "2021"
 
 [dependencies]
-alloy = { workspace = true, default-features = false, features = ["rpc-types-eth"] }
+linera-alloy = { workspace = true, default-features = false, features = ["rpc-types-eth"] }
 async-graphql.workspace = true
 linera-sdk = { workspace = true, features = [ "ethereum" ] }
 serde.workspace = true
