--- a/linera-ethereum/Cargo.toml
+++ b/linera-ethereum/Cargo.toml
@@ -30,13 +30,13 @@ serde_json = { workspace = true, features = ["raw_value"] }
 thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-alloy = { workspace = true, default-features = false, features = [ "rpc-types-eth", "provider-http", "json-rpc", "node-bindings", "signer-wallet", "network", "contract" ] }
+linera-alloy = { workspace = true, default-features = false, features = [ "rpc-types-eth", "provider-http", "json-rpc", "node-bindings", "signer-wallet", "network", "contract" ] }
 url.workspace = true
 tokio = { workspace = true, features = ["full"] }
 linera-storage-service.workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-alloy = { workspace = true, default-features = false, features = [ "rpc-types-eth" ] }
+linera-alloy = { workspace = true, default-features = false, features = [ "rpc-types-eth" ] }
 
 [build-dependencies]
 cfg_aliases.workspace = true
