--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -94,7 +94,7 @@ tracing-subscriber = { workspace = true, features = ["fmt"] }
 cfg_aliases.workspace = true
 
 [dev-dependencies]
-alloy = { workspace = true, default-features = false, features = [ "rpc-types-eth" ] }
+linera-alloy = { workspace = true, default-features = false, features = [ "rpc-types-eth" ] }
 amm.workspace = true
 base64.workspace = true
 counter.workspace = true
