--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ edition = "2021"
 
 [workspace.dependencies]
 heck = "0.4.1"
-linera-alloy = { git = "https://github.com/MathieuDutSik/alloy", rev = "40785f5552962c98d36a636e543b378ac787486f", default-features = false }
+linera-alloy = { version = "0.1.0", default-features = false }
 anyhow = "1.0.80"
 assert_matches = "1.5.0"
 async-graphql = "=7.0.2"
