--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -17,7 +17,7 @@ members = [
 ]
 
 [workspace.dependencies]
-linera-alloy = { git = "https://github.com/MathieuDutSik/alloy", rev = "40785f5552962c98d36a636e543b378ac787486f", default-features = false }
+linera-alloy = { version = "0.1.0", default-features = false }
 assert_matches = "1.5.0"
 async-graphql = { version = "=7.0.2", default-features = false }
 base64 = "0.22.0"
