--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -15,7 +15,7 @@ version.workspace = true
 ethereum = []
 default = ["wasmer", "rocksdb"]
 test = ["linera-views/test", "linera-execution/test"]
-benchmark = ["linera-base/test", "dep:linera-sdk", "dep:port-selector"]
+benchmark = ["linera-base/test", "dep:linera-sdk"]
 wasmer = ["linera-execution/wasmer", "linera-storage/wasmer"]
 wasmtime = ["linera-execution/wasmtime", "linera-storage/wasmtime"]
 rocksdb = [
@@ -71,7 +71,7 @@ linera-storage-service.workspace = true
 linera-version.workspace = true
 linera-views = { workspace = true, features = ["metrics"] }
 pathdiff = { workspace = true, optional = true }
-port-selector = { workspace = true, optional = true }
+port-selector.workspace = true
 prometheus = { workspace = true, optional = true }
 rand.workspace = true
 rcgen.workspace = true
