--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -81,6 +81,7 @@ tempfile.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["full"] }
 tokio-stream.workspace = true
+tokio-util.workspace = true
 toml.workspace = true
 tonic = { workspace = true, features = ["transport", "tls", "tls-roots"] }
 tonic-health.workspace = true
