Added docker compose validator

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -111,4 +111,7 @@ COPY --chmod=755 \
     docker/server-entrypoint.sh \
     docker/server-init.sh \
     docker/proxy-init.sh \
+    docker/compose-server-entrypoint.sh \
+    docker/compose-proxy-entrypoint.sh \
+    docker/compose-server-init.sh \
     ./
