--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: scylladb/scylla:latest
     container_name: scylla
     volumes:
-      - scylla-data:/var/lib/scylla
+      - linera-scylla-data:/var/lib/scylla
     environment:
       SCYLLA_AUTO_CONF: 1
       SCYLLA_ENABLE_EXPERIMENTAL: 1
@@ -16,14 +16,14 @@ services:
     command: [ "./compose-proxy-entrypoint.sh" ]
     volumes:
       - .:/config
-      - shared:/shared
+      - linera-shared:/shared
   shard:
     image: linera-test
     container_name: shard
     command: [ "./compose-server-entrypoint.sh" ]
     volumes:
       - .:/config
-      - shared:/shared
+      - linera-shared:/shared
     depends_on:
       - shard-init
   shard-init:
@@ -32,11 +32,11 @@ services:
     command: [ "./compose-server-init.sh" ]
     volumes:
       - .:/config
-      - shared:/shared
+      - linera-shared:/shared
     depends_on:
       - scylla
 
 volumes:
-  scylla-data:
+  linera-scylla-data:
     driver: local
-  shared: # used for cross-container comms.
+  linera-shared: # used for cross-container comms.
